scam (0.1.7)

  * added redefine, prior, and priorDefinition to reflection.lib
  * reflection.lib is no longer included by main.lib
  * folded clone.lib into reflection.lib
  * added primitives lineNumber and fileName
  * added assoc to main.lib
  * added the ability to gc arrays 
  * fixed gc string bug - now strings are gc'd in a contiguous fashion

scam (0.1.6)

  * can now parse an empty file
  * added the string coercion function
  * removed non-variadic versions of and, or
  * updated inherit.lib to reflect new object organization
  * added ++ and -- operators
  * added pretty.lib for pretty printing code

scam (0.1.5)

  * changed environment predefineds to __context, __level, __label, etc.
  * detects formal parameters that are not symbols
  * (- 3) now returns -3, for example
  * dot operator now chains, as in (. obj x y z) equals (. (. (. obj x) y) z)

scam (0.1.4)

  * added the pp function to pretty print all objects in the system
  * fixed gc bug in variadic math functions (hopefully!)

scam (0.1.3)

  * removed limit on number of statements per scope
  * allowed function calls to generate symbols for assign, set!, and .
  * added inherit.lib

scam (0.1.2)

  * added library functions

scam (0.1.1)

  * added traceback on exceptions (use -t option to display traceback)

scam (0.1.0)

  * initial Scam pre-release

  -- John C. Lusth <lusth@cs.ua.edu>  2011-08-23 